# uwb_wearable_pi

./: .gitattributes  README.md  pyproject.toml
config/: wearable.yaml
src/wearable/: bno085.py  button.py  config.py  main.py  publisher.py
systemd/: install_services.sh  uwb-wearable.service
