[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wearable"
version = "0.1.0"
description = "UWB wearable IMU publisher for stage navigation system"
requires-python = ">=3.12"
dependencies = [
    "pyzmq",
    "pyyaml",
    "adafruit-circuitpython-bno08x",
    "adafruit-blinka",
    "gpiozero",
    "lgpio",
]

[project.scripts]
uwb-wearable = "wearable.main:main"

[tool.hatch.envs.default]
python = "3.12"

[tool.hatch.envs.default.scripts]
wearable = "uwb-wearable --config config/wearable.yaml"
